@@ -1,7 +1,7 @@
 #  File src/library/utils/R/prompt.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -93,9 +93,7 @@ function(object, filename = NULL, name = NULL,
     }
 
     ## Construct the definition for \examples.
-    x.def <- attr(x, "source")
-    if(is.null(x.def))
-        x.def <- deparse(x)
+    x.def <- deparse(x)
     if(any(br <- substr(x.def, 1L, 1L) == "}"))
         x.def[br] <- paste(" ", x.def[br])
 
